# negicco

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01-getting-started/: CMakeLists.txt  Makefile
01_HelloClangLibTooling/: main.cpp
02-named-declarations/: CMakeLists.txt  Makefile  README.md  main.cpp
02_PrintAllNamedDecl/: README.md  main.cpp
03-comments/: CMakeLists.txt  README.md  main.cpp
03_EnumClassFromAST/: Makefile  main.cpp
04-help-text/: CMakeLists.txt  README.md  main.cpp
05-enum-classes/: CMakeLists.txt  README.md  main.cpp
05_GetVariablesFromAST/: main.cpp
06-variables/: CMakeLists.txt  README.md
07-functions/: CMakeLists.txt  README.md  main.cpp
tests/: enum_class.cpp
